# redtrack

./: .gitignore  Caddyfile  Cargo.toml  README.md  a.sh
migrations/2024-05-27-202952_create_posts/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
web/: package.json
web/src/: App.svelte
