[package]
name = "redtrack"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = "0.4.38"
deadpool-diesel = { version = "0.6.1", features = ["postgres", "tracing", "serde"] }
diesel = { version = "2.1.6", features = ["postgres_backend", "postgres"] }
dotenvy = "0.15.7"
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
